# rbrmoored

./: .gitignore  HISTORY.md  Makefile  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml
notebooks/: rbr_proc_test_file.ipynb
rbrmoored/: __init__.py  solo.py
rbrmoored/tests/: test_basic.py
rbrmoored/tests/data/: 076611_20201012_1352.rsk
src/rbrmoored/: __init__.py  solo.py  utils.py
src/rbrmoored/tests/: test_basic.py
