[build-system]
requires = ["uv_build>=0.8.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "rbrmoored"
version = "2026.03"
authors = [
    {name = "Gunnar Voet", email = "gvoet@ucsd.edu"},
    ]
description = "Moored RBR Solo data processing"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["physical oceanography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Oceanography",
    ]
requires-python = ">= 3.10"
dependencies = [
    "numpy>=2.0.0",
    "xarray",
    "netcdf4>=1.7.0",
    "pyrsktools>=1.1.2",
]

# with the following we force pyrsktools to work with numpy>=2
# [tool.uv]
# override-dependencies = [
#     "numpy>=2.0.0"
# ]

[tool.uv.sources]
# pyrsktools = { git = "https://github.com/gunnarvoet/pyrsktools", branch = "gunnar_main" }
pyrsktools = { path = "../pyrsktools", editable = true }


[project.urls]
Documentation = "https://gunnarvoet.net/sbemoored/rbrmoored.html"
Repository = "https://github.com/gunnarvoet/rbrmoored.git"
Issues = "https://github.com/gunnarvoet/rbrmoored/issues"
Changelog = "https://github.com/gunnarvoet/sbemoored/blob/main/HISTORY.md"

[tool.pytest.ini_options]
# in general, do not place a `__init__.py` in your tests
# options are explained here:
# https://learn.scientific-python.org/development/guides/pytest/
minversion = "6.0"
# addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
addopts = []
xfail_strict = true
filterwarnings = [
    "ignore:numpy.dtype size changed",
    "ignore:numpy.ufunc size changed",
    "ignore:numpy.ndarray size changed",
    ]
log_cli_level = "info"
testpaths = [
    "src/rbrmoored/tests/",
    ]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
